tests/snapshots/text_objects_test__di_double_quote.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello ["]world" test
