tests/snapshots/text_objects_test__di_paren.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[f]unc(arg1, arg2)
