tests/snapshots/text_objects_test__di_quote_from_inside.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
"he[l]lo world"
