tests/snapshots/text_objects_test__dip_delete_paragraph.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 4

Buffer:
[l]ine 1
line 2

next para
