tests/snapshots/text_objects_test__dis_delete_sentence.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:0
Lines: 1

Buffer:
[i]rst sentence. Second sentence. Third.
